fixed the random error on the compacted topic tests (#129)
close #24